Fixed header alignment

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -159,6 +159,7 @@ header {
     background: linear-gradient(to bottom, darken($col__secondary, 5%), lighten($col__secondary, 10%));
     z-index: 1000;
     transition: all 1s;
+    border-bottom: 3px solid rgba($black, 0.2);
 
     hr {
       margin: 0.5rem 0;
@@ -167,12 +168,9 @@ header {
 
     a:first-of-type {
       margin-top: 1rem;
-      // text-decoration: none;
-      // border-bottom: 1px solid $col__font--primary;
     }
 
     &.hidden {
-      // display: none !important;
       top: -20rem !important;
     }
   }
@@ -181,11 +179,16 @@ header {
     width: 3rem;
     height: 3rem;
     display: none;
+    margin-left: -1rem;
   }
   ._openMenu {
     width: 2.2rem;
     height: 2.2rem;
     display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 1rem;
   }
 
   @media #{$screen-phone-m} {
